--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,6 +15,12 @@ body{
     font-family: var(--ff);
 }
 
+body.lock{
+    @include desktop{
+        overflow: hidden;
+    }
+  }
+
 .container{
     padding: 0 20rem;
     max-width: 1210rem;
